--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -38,6 +38,8 @@
                                     <li><a href="/carrera/admision"><span class="text-middle">Admisión</span></a></li>
                                     <li><a href="/carrera/organigrama"><span class="text-middle">Organigrama</span></a></li>
                                     <li><a href="/carrera/objetivos"><span class="text-middle">Misión - Visión</span></a></li>
+                                    <li><a href="/carrera/equipo_directivo"><span class="text-middle">Equipo Directivo</span></a></li>
+                                    <li><a href="/carrera/coordinación"><span class="text-middle">Coordinación</span></a></li>
                                     <li><a href="/carrera/docentes"><span class="text-middle">Docentes</span></a></li>
                                     <li><a href="/carrera/plan"><span class="text-middle">Plan Estudios</span></a></li>
                                     <li><a href="/carrera/perfile"><span class="text-middle">Perfil Egresado</span></a></li>
@@ -68,7 +70,7 @@
                             <li class="{% active_menu '/investigacion' %}"><a href="#"><span>Investigación</span></a>
                                 <ul class="rd-navbar-dropdown">
                                     <li><a href="/investigacion/documentos"><span class="text-middle">Políticas y Criterios</span></a></li>
-                                    <li><a href="/investigacion/cienciometria"><span class="text-middle">Cienciometría</span></a></li>
+                                    <li><a href="/investigacion/productividad"><span class="text-middle">Productividad</span></a></li>
                                 </ul></li>
                             <li class="{% active_menu '/documentos' %}"><a href="/documentos"><span>Documentos</span></a></li>
                             <li class="{% active_menu '^(/carrera/)(co)([a-z]+)' %}"><a href="/carrera/contacto"><span>Contacto</span></a></li>
