--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -39,7 +39,7 @@
                                     <li><a href="/carrera/organigrama"><span class="text-middle">Organigrama</span></a></li>
                                     <li><a href="/carrera/objetivos"><span class="text-middle">Misión - Visión</span></a></li>
                                     <li><a href="/carrera/equipo_directivo"><span class="text-middle">Equipo Directivo</span></a></li>
-                                    <li><a href="/carrera/coordinación"><span class="text-middle">Coordinación</span></a></li>
+                                    <li><a href="/carrera/coordinacion"><span class="text-middle">Coordinación</span></a></li>
                                     <li><a href="/carrera/docentes"><span class="text-middle">Docentes</span></a></li>
                                     <li><a href="/carrera/plan"><span class="text-middle">Plan Estudios</span></a></li>
                                     <li><a href="/carrera/perfile"><span class="text-middle">Perfil Egresado</span></a></li>
