Se agrega link del canal de youtube

--- a/web/templates/carrera/index.html
+++ b/web/templates/carrera/index.html
@@ -25,7 +25,7 @@
                     </p>
                 </div>
                 <div class="col-md-12" style="margin-top:20px;">
-                    <center><a href="#" class="btn btn-ellipse btn-java">mas videos</a></center>
+                    <center><a href="https://www.youtube.com/channel/UC-uRcTLGKySwEn976VaeXtA/" class="btn btn-ellipse btn-java">mas videos</a></center>
                 </div>
             </div>
         </div>
