Se mejora espaciado de novedades en index

--- a/web/static/css/custom.css
+++ b/web/static/css/custom.css
@@ -325,6 +325,10 @@ section.section-100-down{
     padding-bottom: 100px;
 }
 
+section.section-150-down{
+    padding-bottom: 150px;
+}
+
 section.section-70-up{
     padding-top: 70px;
 }
