--- a/web/templates/carrera/index.html
+++ b/web/templates/carrera/index.html
@@ -19,7 +19,7 @@
                     </p>
                 </div>
                 <div class="col-md-6 marco-video">
-                    <iframe src="https://www.youtube.com/embed/-yQmV3nQRsQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/kj1ujARuLyY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <p class="msg">
                       <span class="fa-quote-left"></span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa quas velit nesciunt tempore qui rerum deserunt vitae. Ad sed numquam tempore, velit, quaerat consequatur veniam! Eaque expedita maiores quisquam, vero rem molestiae optio ex harum, odit. At quod autem maxime?<span class="fa-quote-right"></span>
                     </p>
