Se repara menu de coordinacion (activate contact)

--- a/web/templates/carrera/coordinacion.html
+++ b/web/templates/carrera/coordinacion.html
@@ -4,8 +4,6 @@
 {% block title %}Equipo de Coordinación{% endblock %}
 
 {% block content %}
-<!-- What makes us different-->
-<!--What makes us different-->
 <!-- Modern Breadcrumbs-->
 <section class="breadcrumb-modern context-dark text-md-left">
     <div class="shell section-34 section-md-top-110 section-md-bottom-41">
@@ -18,83 +16,80 @@
 </section>
 <!-- Page Content-->
 <main class="page-content">
-
-  <!-- Our team-->
   <section class="section-98 section-sm-50">
-      <div class="shell">
-          <div class="isotope-wrap">
-              <div class="row">
-                <div class="col-md-3">
-                    <div class="thumbnail" style="background-color:lightblue">
-                      <img width="270" height="270" src="{% static 'images/carrera/docentes/mujer.png' %}" alt=""/>
-                      <div class="caption">
-                        <h5 class="text-center">Viviana Escudero</h5>
-                        <p class="text-center">Área Curricular de Ciencias Básicas</p>
-                      </div>
-                    </div>
-                  </div>    
-                  <div class="col-md-3">
-                    <div class="thumbnail" style="background-color:lightblue">
-                      <img width="270" height="270" src="{% static 'images/carrera/docentes/mujer.png' %}" alt=""/>
-                      <div class="caption">
-                        <h5 class="text-center">Rosa Cuevas</h5>
-                        <p class="text-center">Área Curricular de Patología y Diagnóstico</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-3">
-                    <div class="thumbnail" style="background-color:lightblue">
-                      <img width="270" height="270" src="{% static 'images/carrera/docentes/hombre.png' %}" alt=""/>
-                      <div class="caption">
-                        <h5 class="text-center">Christian Castillo</h5>
-                        <p class="text-center">Área Curricular de Ciencias Preclínicas Integradas</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-3">
-                    <div class="thumbnail" style="background-color:lightblue">
-                      <img width="270" height="270" src="{% static 'images/carrera/docentes/mujer.png' %}" alt=""/>
-                      <div class="caption">
-                        <h5 class="text-center">Paula Arriagada</h5>
-                        <p class="text-center">Área Curricular de Odontología Integral del Niño</p>
-                      </div>
-                    </div>
-                  </div>                
-              </div>
-              <br>
-              <div class="row">
-                <div class="col-md-3 col-md-offset-1">
-                    <div class="thumbnail" style="background-color:lightblue">
-                      <img width="270" height="270" src="{% static 'images/carrera/docentes/hombre.png' %}" alt=""/>
-                      <div class="caption">
-                        <h5 class="text-center">Konrad Fritz</h5>
-                        <p class="text-center">Área Curricular de Odontología Conservadora</p>
-                      </div>
-                    </div>
-                  </div>    
-                  <div class="col-md-3">
-                    <div class="thumbnail" style="background-color:lightblue">
-                      <img width="270" height="270" src="{% static 'images/carrera/docentes/mujer.png' %}" alt=""/>
-                      <div class="caption">
-                        <h5 class="text-center">Jorge Maldonado</h5>
-                        <p class="text-center">Área Curricular de Rehabilitación Oral</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-3">
-                    <div class="thumbnail" style="background-color:lightblue">
-                      <img width="270" height="270" src="{% static 'images/carrera/docentes/hombre.png' %}" alt=""/>
-                      <div class="caption">
-                        <h5 class="text-center">Andrés Guerrero</h5>
-                        <p class="text-center">Área Curricular de Cirugía</p>
-                        <p></p>
-                      </div>
-                    </div>
-                  </div>                
+    <div class="shell text-left">
+      <div class="isotope-wrap">
+        <div class="row">
+          <div class="col-md-3">
+            <div class="thumbnail" style="background-color:lightblue">
+              <img width="270" height="270" src="{% static 'images/carrera/docentes/mujer.png' %}" alt="" />
+              <div class="caption">
+                <h5 class="text-center">Viviana Escudero</h5>
+                <p class="text-center">Área Curricular de Ciencias Básicas</p>
               </div>
             </div>
+          </div>
+          <div class="col-md-3">
+            <div class="thumbnail" style="background-color:lightblue">
+              <img width="270" height="270" src="{% static 'images/carrera/docentes/mujer.png' %}" alt="" />
+              <div class="caption">
+                <h5 class="text-center">Rosa Cuevas</h5>
+                <p class="text-center">Área Curricular de Patología y Diagnóstico</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="thumbnail" style="background-color:lightblue">
+              <img width="270" height="270" src="{% static 'images/carrera/docentes/hombre.png' %}" alt="" />
+              <div class="caption">
+                <h5 class="text-center">Christian Castillo</h5>
+                <p class="text-center">Área Curricular de Ciencias Preclínicas Integradas</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="thumbnail" style="background-color:lightblue">
+              <img width="270" height="270" src="{% static 'images/carrera/docentes/mujer.png' %}" alt="" />
+              <div class="caption">
+                <h5 class="text-center">Paula Arriagada</h5>
+                <p class="text-center">Área Curricular de Odontología Integral del Niño</p>
+              </div>
+            </div>
+          </div>
         </div>
-                  
-   </section>
+        <br>
+        <div class="row">
+          <div class="col-md-3 col-md-offset-1">
+            <div class="thumbnail" style="background-color:lightblue">
+              <img width="270" height="270" src="{% static 'images/carrera/docentes/hombre.png' %}" alt="" />
+              <div class="caption">
+                <h5 class="text-center">Konrad Fritz</h5>
+                <p class="text-center">Área Curricular de Odontología Conservadora</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="thumbnail" style="background-color:lightblue">
+              <img width="270" height="270" src="{% static 'images/carrera/docentes/mujer.png' %}" alt="" />
+              <div class="caption">
+                <h5 class="text-center">Jorge Maldonado</h5>
+                <p class="text-center">Área Curricular de Rehabilitación Oral</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="thumbnail" style="background-color:lightblue">
+              <img width="270" height="270" src="{% static 'images/carrera/docentes/hombre.png' %}" alt="" />
+              <div class="caption">
+                <h5 class="text-center">Andrés Guerrero</h5>
+                <p class="text-center">Área Curricular de Cirugía</p>
+                <p></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </main>
 {% endblock %}
