--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -33,7 +33,7 @@
                         <!-- RD Navbar Nav-->
                         <ul class="rd-navbar-nav">
                             <li class="{% active_menu '^[/]$' %}"><a href="/"><span>Inicio</span></a></li>
-                            <li class="{% active_menu '^(/carrera/)(or|ob|pl|pe)([a-z]+)' %}"><a href="#"><span>Carrera</span></a>
+                            <li class="{% active_menu '^(/carrera/)(or|ob|pl|pe|coo)([a-z]+)' %}"><a href="#"><span>Carrera</span></a>
                                 <ul class="rd-navbar-dropdown">
                                     <li><a href="/carrera/admision"><span class="text-middle">Admisión</span></a></li>
                                     <li><a href="/carrera/organigrama"><span class="text-middle">Organigrama</span></a></li>
@@ -73,7 +73,7 @@
                                     <li><a href="/investigacion/productividad"><span class="text-middle">Productividad</span></a></li>
                                 </ul></li>
                             <li class="{% active_menu '/documentos' %}"><a href="/documentos"><span>Documentos</span></a></li>
-                            <li class="{% active_menu '^(/carrera/)(co)([a-z]+)' %}"><a href="/carrera/contacto"><span>Contacto</span></a></li>
+                            <li class="{% active_menu '^(/carrera/)(con)([a-z]+)' %}"><a href="/carrera/contacto"><span>Contacto</span></a></li>
                         </ul>
                     </div>
                 </div>
